using branch to get treemap
