# routers/docs/swagger.json
@@ -89,6 +89,12 @@
                         "description": "tag ref",
                         "name": "tag",
                         "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "files list of the repository",
+                        "name": "files",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -201,7 +207,7 @@
                 }
             }
         },
-        "/reports/{id}/treemap/{commit}": {
+        "/reports/{id}/treemap/{source}": {
             "get": {
                 "produces": [
                     "image/svg+xml"
@@ -220,8 +226,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "commit sha",
-                        "name": "commit",
+                        "description": "source branch",
+                        "name": "source",
                         "in": "path",
                         "required": true
                     }
